# domino-effect

./: .gitignore  LICENSE  README.md  domino-effect.cabal
haskell/docs/: DominoEffect.html  Main.html  Puzzles.html  doc-index.html  index.html  mini_DominoEffect.html  mini_Puzzles.html
haskell/docs/src/: DominoEffect.html  Main.html  Puzzles.html
haskell/src/: DominoEffect.hs  DominoRecurse.hs  DominoTree.hs  Main.hs  Puzzles.hs
java/: build.gradle  settings.gradle
java/src/: DominoEffect.java
java/src/main/java/com/nedap/university/erik/dominoeffect/: Bone.java  DominoEffect.java  Move.java  Position.java  Puzzle.java  Puzzles.java  Solution.java  Solutions.java  Tools.java
java/src/test/java/com/nedap/university/erik/dominoeffect/: BoneTest.java  MoveTest.java  PositionTest.java  PuzzleTest.java  SolutionTest.java  TestData.java  TestTools.java
